# ocaml-cordova-plugin-firebase

./: README.md  cordova-plugin-firebase.opam  dune-project
.github/workflows/: main.yml
src/: cordova_firebase.mli  dune
